--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -11,8 +11,9 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Core.IServices\Core.IServices.csproj" />
-      <ProjectReference Include="..\Domain.Services\Domain.Services.csproj" />
+      <ProjectReference Include="..\Core\Core.csproj" />
+      <ProjectReference Include="..\Domain\Domain.csproj" />
+      <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
     </ItemGroup>
 
 </Project>
